SimplestCRUDExample-main/src/main/java/com/example/SimplestCRUDExample/Error/RecordAlreadyExistsException.java
package com.example.SimplestCRUDExample.Error;

public class RecordAlreadyExistsException extends RuntimeException{
    public RecordAlreadyExistsException(String id) {
        super(id);
    }
}
